# metodikProjekt

./: 0001.patch  CMakeLists.txt  README.md  doxy  main.cpp  metodik.sql
View/: accountview.cpp  accountview.h  accountview.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  stockview.cpp  stockview.h  stockview.ui  userview.cpp  userview.h  userview.ui
ViewModel/: accountviewmodel.cpp  accountviewmodel.h  stockviewmodel.cpp  stockviewmodel.h  userviewmodel.cpp  userviewmodel.h
classes/: Account.class.cpp  Account.class.h  Api.class.cpp  Api.class.h  Db.class.cpp  Db.class.h  Sql.class.cpp  Sql.class.h  Stock.class.cpp  Stock.class.h  User.class.cpp  User.class.h
html/: 8358e75de26980810ef35c4a66dcb53e13abe5d7db1b2bce648bc3813452680d_8d.html  Account_8class_8cpp.html  Account_8class_8cpp__incl.dot  Account_8class_8h.html  Account_8class_8h__dep__incl.dot  Account_8class_8h__incl.dot  Account_8class_8h_source.html  Api_8class_8cpp.html  Api_8class_8cpp__incl.dot  Api_8class_8h.html  Api_8class_8h__dep__incl.dot  Api_8class_8h__incl.dot  Api_8class_8h_source.html  Db_8class_8cpp.html  Db_8class_8cpp__incl.dot  Db_8class_8h.html  Db_8class_8h__dep__incl.dot  Db_8class_8h__incl.dot  Db_8class_8h_source.html  Desktop__Qt__6__7__0-Debug_2CMakeFiles_23_827_87_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  Desktop__Qt__6__7__0-Profile_2CMakeFiles_23_827_87_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  Sql_8class_8cpp.html  Sql_8class_8cpp__incl.dot  Sql_8class_8h.html  Sql_8class_8h__dep__incl.dot  Sql_8class_8h__incl.dot  Sql_8class_8h_source.html  Stock_8class_8cpp.html  Stock_8class_8cpp__incl.dot  Stock_8class_8h.html  Stock_8class_8h__dep__incl.dot  Stock_8class_8h__incl.dot  Stock_8class_8h_source.html  User_8class_8cpp.html  User_8class_8cpp__incl.dot  User_8class_8h.html  User_8class_8h__dep__incl.dot  User_8class_8h__incl.dot  User_8class_8h_source.html  accountview_8cpp.html  (+250 more)
latex/: 8358e75de26980810ef35c4a66dcb53e13abe5d7db1b2bce648bc3813452680d_8d.tex  Account_8class_8cpp.tex  Account_8class_8cpp.tex.tmp  Account_8class_8cpp__incl.dot  Account_8class_8h.tex  Account_8class_8h__dep__incl.dot  Account_8class_8h__incl.dot  Api_8class_8cpp.tex  Api_8class_8cpp__incl.dot  Api_8class_8h.tex  Api_8class_8h__dep__incl.dot  Api_8class_8h__incl.dot  Db_8class_8cpp.tex  Db_8class_8cpp__incl.dot  Db_8class_8h.tex  Db_8class_8h__dep__incl.dot  Db_8class_8h__incl.dot  Desktop__Qt__6__7__0-Debug_2CMakeFiles_23_827_87_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.tex  Desktop__Qt__6__7__0-Profile_2CMakeFiles_23_827_87_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.tex  Sql_8class_8cpp.tex  Sql_8class_8cpp__incl.dot  Sql_8class_8h.tex  Sql_8class_8h__dep__incl.dot  Sql_8class_8h__incl.dot  Stock_8class_8cpp.tex  Stock_8class_8cpp__incl.dot  Stock_8class_8h.tex  Stock_8class_8h__dep__incl.dot  Stock_8class_8h__incl.dot  User_8class_8cpp.tex  User_8class_8cpp__incl.dot  User_8class_8h.tex  User_8class_8h__dep__incl.dot  User_8class_8h__incl.dot  accountview_8cpp.tex  accountview_8cpp__incl.dot  (+155 more)
(+63 files in other folders)
